[project]
name = "langchain-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.13.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "pypdf>=6.9.2",
    "pytest>=9.0.3",
    "requests[socks]>=2.33.1",
]
